# vscode-c-project-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.cache/clangd/index/: main.c.5B45D2AF6381327F.idx  main.c.995486B02EBF829F.idx  name.c.6D7E0C0ED6CF41CB.idx
.devcontainer/: Dockerfile  devcontainer.json
src/: main.c
